# netcode

./: .gitignore  .gitmodules  .travis.yml  BUILDING.md  CLAUDE.md  CMakeLists.txt  Cargo.toml  IMPLEMENTERS.md  LICENCE  README.md  STANDARD.md  TODO  build.rs  client.c  client_server.c  netcode.c  netcode.h  premake5.lua  profile.c  server.c  soak.c  speednet.c  speednet.h  test.c  test.cpp  todo.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  release-check.yml  scheduled.yml
c/: BUILDING.md  TODO  client.c  client_server.c  netcode.c  netcode.h  premake5.lua  profile.c  server.c  soak.c  test.c
c/docker/: Dockerfile
c/valgrind/: Dockerfile
c/valgrind/netcode.io/: client.c  netcode.c  server.c  soak.c
docker/: Dockerfile
fuzz/: README.md  fuzz.h  fuzz_connect_token.c  fuzz_parse_address.c  fuzz_read_packet.c
fuzz/corpus/fuzz_parse_address/: ipv4_any_port  ipv4_max  ipv4_port  ipv6_any_port  ipv6_bare  ipv6_doc_port  ipv6_linklocal_port  ipv6_loopback  ipv6_loopback_port
go/: buffer.go  challenge_token.go  challenge_token_test.go  client.go  config.go  connect_token.go  connect_token_private.go  connect_token_private_test.go  connect_token_shared.go  connect_token_test.go  crypto.go  packet.go  packet_test.go  replay_protection.go  simulator.go
go/netcode/: README.md  buffer.go  buffer_test.go  chacha20_inline.go  challenge_token.go  challenge_token_test.go  client.go  client_config.go  client_instance.go  client_manager.go  client_manager_test.go  client_test.go  config.go  connect_token.go  connect_token_private.go  connect_token_private_test.go  connect_token_shared.go  connect_token_shared_test.go  connect_token_test.go  crypto.go  netcode_conn.go  packet.go  packet_queue.go  packet_test.go  queue.go  replay_protection.go  replay_protection_test.go  server.go  server_test.go  sizes.go  socket.go
go/netcode/examples/c_client/: c_client.go
go/netcode/examples/client/: client.go
go/netcode/examples/server/: mem.pprof  memold.pprof  server.go
rust/: Cargo.toml  README.md  build.rs  todo.md
rust/src/: capi.rs  channel.rs  client.rs  common.rs  crypto.rs  error.rs  example.rs  lib.rs  packet.rs  socket.rs  token.rs
rust/src/server/: connection.rs  mod.rs  replay.rs  socket.rs
rust/src/wrapper/: mod.rs  netcode.rs  private.rs  server.rs  token.rs  util.rs
sodium/: NOTES.md  sodium_blake2b-ref.c  sodium_core.c  sodium_onetimeauth_poly1305.c  sodium_private_common.h  sodium_randombytes_salsa20_random.c  sodium_runtime.c  sodium_salsa20-xmm6_asm.S  sodium_sandy2x.S  sodium_scalarmult_curve25519.c  sodium_stream_chacha20.c  sodium_stream_salsa20.c
src/: client.rs  common.rs  crypto.rs  lib.rs  netcode.rs  packet.rs  server.rs  token.rs  util.rs
src/server/: connection.rs  mod.rs
src/wrapper/: client.rs  mod.rs  netcode.rs  server.rs  test.rs  token.rs
tools/conformance/: README.md  drive_error_paths.c  drive_invalid_token.c  drive_server.c  drive_state_machine.c  gen_vectors.c  verify_standard.py  verify_state_machine.py
valgrind/: Dockerfile
windows/: sodium-debug.lib  sodium-release.lib
