[package]
name = "netcode"
version = "0.2.2"
authors = ["Val Vanderschaegen <valere.vanderschaegen@gmail.com>"]
build = "build.rs"
links = "libnetcode"
keywords = ["netcode"]
license = "BSD-3-Clause"
repository = "https://github.com/vvanders/netcode-rust"
documentation = "https://docs.rs/netcode"
description = "Wrapper for netcode.io library"

[dependencies]
libsodium-sys = "0.0.14"
log = "0.3.6"
byteorder = "1.0.0"
mio = "0.6.5"

[dev-dependencies]
env_logger = "0.4.2"

[build-dependencies]
gcc = "0.3.43"