[package]
name = "netcode"
version = "0.3.0"
authors = ["Val Vanderschaegen <valere.vanderschaegen@gmail.com>"]
build = "build.rs"
links = "libnetcode"
keywords = ["netcode"]
license = "BSD-3-Clause"
repository = "https://github.com/vvanders/netcode-rust"
documentation = "https://docs.rs/netcode"
description = "Wrapper for netcode.io library"

[dependencies]
libsodium-sys = "0.0.14"
log = "0.3.6"
byteorder = "1.0.0"
env_logger = "0.4.2"
time = "0.1.36"

[dev-dependencies]
lazy_static = "0.2.6"

[build-dependencies]
gcc = "0.3.43"
bindgen = "0.22.1"

[[bin]]
path = "src/example.rs"
name = "example"

[lib]
